search form and button with css is addede

--- a/index.Html
+++ b/index.Html
@@ -22,6 +22,12 @@
         <li><a href="#blog">Blog</a></li>
       </ul>
     </nav>
+    <div>
+    <form class="search-form">
+      <input type="text" placeholder="Search..." class="search-input">
+     <button type="submit" class="search-button">Search</button>
+   </form>
+  </div>   
   </header>
 </body>
 </html>
