adding about me discription with css

--- a/index.Html
+++ b/index.Html
@@ -76,6 +76,10 @@
         </div>
       </div>
     </section>
+    <div class="about-me">
+      <h3>About Me</h3>
+      <p>Hi, I'm Pranali Adsul, a passionate blogger and health enthusiast. I created this blog to share my knowledge and experiences on various topics related to health, wellness, and personal development. Join me on this journey as we explore different ways to lead a healthy and fulfilling life.</p>
+    </div>
   </main>
 </body>
 </html>
