sidebars with social-link is added

--- a/index.Html
+++ b/index.Html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Personal Blog</title>
   <link rel="stylesheet" href="styles.css">
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.css">
  </head>
 <body>
   <header>
@@ -76,10 +76,20 @@
         </div>
       </div>
     </section>
-    <div class="about-me">
+    <aside class="sidebar">
+      <h3>Follow Me</h3>
+        <nav>
+          <ul class="social-links">
+            <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+        </ul>
+      </nav>   
+      <div class="about-me">
       <h3>About Me</h3>
       <p>Hi, I'm Pranali Adsul, a passionate blogger and health enthusiast. I created this blog to share my knowledge and experiences on various topics related to health, wellness, and personal development. Join me on this journey as we explore different ways to lead a healthy and fulfilling life.</p>
-    </div>
-  </main>
+      </div>
+    </aside>
+ </main>
 </body>
 </html>
