adding footer and some more responsive styles

--- a/index.Html
+++ b/index.Html
@@ -91,5 +91,18 @@
       </div>
     </aside>
  </main>
+ <footer>
+  <div class="container">
+     <nav>
+          <ul class="footer-menu">
+            <li><a href="#home">Home</a></li>
+            <li><a href="About.html">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li><a href="#blog">Blog</a></li>
+          </ul>
+     </nav>
+    <p>&copy; 2023 Personal Blog. All rights reserved.</p>
+  </div>
+</footer>
 </body>
 </html>
